<resources>
    <string name="app_name">ChamaTableBanking</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_title">Enter Title</string>
    <string name="nav_item1">Home</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="allgrouptrans">All Group Transactions</string>
    <string name="add_member_contribution">Add Member Contribution</string>
    <string name="add_member_fine">Add Member Fine</string>
    <string name="add_project">Add Project</string>
    <string name="create_new_chama_group">Create new chama group</string>
    <string name="creating_new_chama_group">Creating a new chama group</string>
    <string name="add_payment">Add Payment</string>
    <string name="invite_a_member">Invite a member</string>
    <string name="regular_contribution">Regular Contribution(Ksh)</string>
    <string name="sample_date">12/08/2018</string>
    <string name="sample_cash">+ Ksh 5,000</string>
    <string name="contributions_due">Contributions Due</string>
    <string name="group_s_dividents">Group\'s Dividents</string>
    <string name="group_s_projects">Group\'s Projects</string>
    <string name="group_s_transactions">Group\'s Transactions</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="sign_in_cancelled">Sign in Cancelled</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="chama_create_txt">Chama Table Banking helps you easily create, track and manage your chama finances</string>
    <string name="chama_name">Chama Name</string>
    <string name="minimum_entry_fee_ksh">Minimum Entry Fee (Ksh)</string>
    <string name="regular_contribution_minimum_amount_ksh">Regular Contribution minimum minregularcontribution (Ksh)</string>
    <string name="regular_contribution_time">Regular Contribution Time</string>
    <string name="day_of_the_month">Day of the Month</string>
    <string name="day_of_the_week">Day of the Week</string>
    <string name="error_occured">Error Occurred</string>
    <string name="dialog_loading_group">loading your group</string>
    <string name="not_in_agroup">You\'re not in a Group</string>
    <string name="chama_link_txt">Join using the link sent by your chama admin</string>

    <!--App normal invitation-->
    <string name="app_code">https://chamatablebanking.page.link</string>
    <string name="invitation_title">Join Chama table banking</string>
    <string name="invitation_message">Manage and control all your chama activities from your phone</string>
    <string name="invitation_deep_link">https://chamatablebanking.page.link/gr</string>
    <string name="invitation_custom_image">https://user-images.githubusercontent.com/22516895/40451662-fe4f8628-5ee7-11e8-8277-befddbe23201.png</string>
    <string name="invitation_cta">Join</string>

    <string name="create_chama">Form your chama</string>
    <string name="create_chama_dsc">Hacela Chama Table banking makes management of Chama finances easy by easily monitoring your regular contributions, loans and profits</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="content_decription">Image Loading</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="step_one_description">Group Description</string>
    <string name="step_one_name">Group name</string>


    <!-- Chama roles -->
    <string-array name="chamaroles">
        <item>Admin:ChairPerson</item>
        <item>Admin:Secretary</item>
        <item>Admin:Treasurer</item>
    </string-array>

    <!-- Chama cycles -->
    <string-array name="meetingcyles">
        <item>Once a Month</item>
        <item>Once a Week</item>
    </string-array>

    <string-array name="monthcyles">
        <item>Sunday of the Month</item>
        <item>Monday of the Month</item>
        <item>Tuesday of the Month</item>
        <item>Wednesday of the Month</item>
        <item>Thursday of the Month</item>
        <item>Friday of the Month</item>
        <item>Saturday of the Month</item>
    </string-array>

    <string-array name="weekcyles">
        <item>Sunday of the Week</item>
        <item>Monday of the Week</item>
        <item>Tuesday of the Week</item>
        <item>Wednesday of the Week</item>
        <item>Thursday of the Week</item>
        <item>Friday of the Week</item>
        <item>Saturday of the Week</item>
    </string-array>

    <!-- Step Titles -->
    <string-array name="steps_titles">
        <item>Create new chama</item>
        <item>Chama name</item>
        <item>Upload a picture(optional)</item>
        <item>Select your role</item>
        <item>Chama Entry Fee (Non Refundable)</item>
        <item>Regular Meeting &amp; Contribution</item>
    </string-array>

    <!-- Step Titles -->
    <array name="addchama_steps">
        <item>Create</item>
        <item>name</item>
        <item>role</item>
        <item>Fee</item>
        <item>Regular</item>
        <item>Invite</item>
    </array>

    <!-- Step subTitles -->
    <string-array name="steps_subtitles">
        <item>Follow steps to form a chama</item>
        <item>This is the name of your chama</item>
        <item>Select chama picture (optional)</item>
        <item>Only admins can create chamas</item>
        <item>Minimum required for new members to join</item>
        <item>Regular Contribution in meetings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_member_txt">Invite members of your chama using the special link provided below. Members will be able to download this app and join your chama using this link</string>
    <string name="continue_text">Continue</string>
    <string name="verify_text">Verify</string>
    <string name="invite_members">Invite Members</string>
    <string name="skip_and_invite_later">Skip and invite later</string>
    <string name="you_all_set">You\'re all Set</string>
    <string name="select_picture">Select picture</string>
    <string name="change_photo">Change Photo</string>
    <string name="minimum_entry_fee">Minimum Entry Fee(Ksh)</string>
    <string name="min_amount_text">This is the minimum amount of money, a new member is required to pay in order to join your investment group (Chama)</string>
    <string name="close_delete_chama"><![CDATA[Close & Delete Chama]]></string>
    <string name="dismiss">Dismiss</string>
    <string name="you_already_have_a_chama">You already have a Chama !</string>
    <string name="you_can_always_dissolve">You can always dissolve chama and form a new one, if you were testing out how hacela chama table banking works</string>
    <string name="no_have_an_account">Don\'t have an account yet?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="you_offline">You\'re offline</string>
    <string name="retry">Retry</string>
    <string name="chooseEmailClient">Choose your email app</string>

    <!--onboarding texts-->
    <string name="board1">Hacela</string>
    <string name="board1dsc">Hacela Chama Table Banking app allows your investment group to manage its finance activities</string>
    <string name="board2">Create and Invite</string>
    <string name="board2dsc">Easily form a chama and invite all members to download this app using your special link</string>
    <string name="board3">Safe</string>
    <string name="board3dsc">No worries, All transaction are verified by group administration. Same way you always do</string>
    <string name="board4">Transaction</string>
    <string name="board4dsc">Do transactions and get all the transactions you make in real time, view and track all your money</string>

    <!--phone activity texts-->
    <string name="phone">Phone number</string>
    <string name="smscode">SMS CODE</string>
    <string name="confirm">Confirm</string>
    <string name="continue_txt">Continue</string>
    <string name="enter_phonenumber">Enter Phonenumber</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="enter_sms_code">Enter SMS Code</string>
    <string name="status_code_sent">Sms Code Received</string>
    <string name="status_verification_failed">Number verification failed</string>
    <string name="instant_validation">Verification Success</string>
    <string name="invalid_phone_num">Invalid phone number.</string>
    <string name="quota_exceeded">Quota exceeded.</string>

    <string name="kes_0">KES 0/-</string>
    <string name="loan14d">14 days @ 6%</string>
    <string name="sample_loan_apply_text">Loan duration: 7 days @ 4% \n Amount: Ksh 6,000 \n Interest: Ksh 240 \n Processing Charge: Ksh 23 \n Repayment Amount: 6,263 \n Due Date: 10-Oct-2018</string>
    <string name="apply_for_a_loan">Apply for a loan</string>
    <string name="sign_u_out">Signing you out</string>
    <string name="manage_your_password">Manage your password</string>
    <string name="manage_account">Manage account</string>
    <string name="sign_out">Sign out</string>
    <string name="manage_your_account">Manage your account</string>
    <string name="manage_your_members">Manage group members</string>
    <string name="manage_transaction">Manage Transactions</string>
    <string name="email_us">Email us</string>
    <string name="manage_group">Manage Group</string>
    <string name="save">Save</string>
</resources>
