<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.StepUnitFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/step_unit_unitname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/step_one_name"
                    android:inputType="textAutoComplete"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/step_unit_unitcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/step_one_description"
                    android:inputType="textShortMessage"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="16dp"
        >

    <!-- request button -->
        <TextView
            android:id="@+id/step_unit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/step_unit_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            />
    </LinearLayout>

</RelativeLayout>